@@ -96,6 +96,11 @@
       <url>file:///tmp/maven2</url>
       <layout>default</layout>
     </repository>
+    <site>
+      <id>local</id>
+      <name>Local Test</name>
+      <url>file:///tmp/site</url>
+    </site>
   </distributionManagement>
 <pluginRepositories>
   <pluginRepository>
@@ -585,9 +590,13 @@ This is not needed now that pluto have been released
                <debug>true</debug>
                <links>
                   <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
-               </links>
+               </links> 
                <breakiterator>true</breakiterator>
-               <verbose>true</verbose>
+               <verbose>false</verbose>
+               <aggregate>true</aggregate>
+               <maxmemory>512m</maxmemory>
+               <additionalJOption>-J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
+               <version>2.3</version>
             </configuration>
          </plugin>
          <plugin>
@@ -606,7 +615,7 @@ This is not needed now that pluto have been released
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-pmd-plugin</artifactId>
             <configuration>
-               <targetjdk>1.5</targetjdk>
+               <targetJdk>1.5</targetJdk>
                <rulesets>
                   <ruleset>/rulesets/basic.xml</ruleset>
                   <ruleset>/rulesets/codesize.xml</ruleset>
@@ -624,15 +633,17 @@ This is not needed now that pluto have been released
                <minimumTokens>100</minimumTokens>
             </configuration>
          </plugin>
+<!--
          <plugin>
-            <!-- Changelog report -->
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>changelog-maven-plugin</artifactId>
+            <! - - Changelog report - - >
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-changelog-plugin</artifactId>
             <configuration>
                <type>range</type>
-               <range>90</range><!-- days -->
+               <range>90</range><! - - days - - >
             </configuration>
          </plugin>
+-->
          <plugin>
             <!-- TODO tags report -->
             <groupId>org.codehaus.mojo</groupId>
@@ -652,8 +663,8 @@ This is not needed now that pluto have been released
          </plugin>
          <plugin>
             <!-- jxr source code cross linking -->
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>jxr-maven-plugin</artifactId>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jxr-plugin</artifactId>
             <configuration>
                <linkJavadoc>true</linkJavadoc>
                <javadocDir>apidocs</javadocDir>
@@ -781,5 +792,6 @@ This is not needed now that pluto have been released
     <module>test</module>
     <module>jcr</module>
     <module>cluster</module>
+    <module>kernel-site</module>
   </modules>
 </project>
